@@ -1,9 +1,10 @@
 package io.inprice.api.app.alarm;
 
 import java.math.BigDecimal;
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 
+import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.jdbi.v3.core.Handle;
 import org.slf4j.Logger;
@@ -38,7 +39,7 @@ import io.inprice.common.models.LinkGroup;
  */
 public class AlarmService {
 
-	private static final Logger log = LoggerFactory.getLogger(AlarmService.class);
+	private static final Logger logger = LoggerFactory.getLogger(AlarmService.class);
 
 	Response insert(AlarmDTO dto) {
 		Response res = Responses.Invalid.ALARM;
@@ -195,13 +196,13 @@ public class AlarmService {
 			where.append("'");
 		}
 
-		if (dto.getSubjects() != null && dto.getSubjects().size() > 0) {
+		if (CollectionUtils.isNotEmpty(dto.getSubjects())) {
 			where.append(
 		    String.format(" and a.subject in (%s) ", io.inprice.common.utils.StringUtils.join("'", dto.getSubjects()))
 	    );
 		}
 
-		if (dto.getWhens() != null && dto.getWhens().size() > 0) {
+		if (CollectionUtils.isNotEmpty(dto.getWhens())) {
 			where.append(
 		    String.format(" and a.subject_when in (%s) ", io.inprice.common.utils.StringUtils.join("'", dto.getWhens()))
 	    );
@@ -260,9 +261,9 @@ public class AlarmService {
 	        )
 		    .map(new AlarmMapper()).list();
 
-			return new Response(Collections.singletonMap("rows", searchResult));
+			return new Response(Map.of("rows", searchResult));
 		} catch (Exception e) {
-			log.error("Failed in full search for alarms.", e);
+			logger.error("Failed in full search for alarms.", e);
 			return Responses.ServerProblem.EXCEPTION;
 		}
 	}
