@@ -3,9 +3,6 @@ package io.inprice.api.utils;
 import java.util.List;
 import java.util.Map;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
-
 import kong.unirest.json.JSONObject;
 
 public class Fixtures {
@@ -19,10 +16,10 @@ public class Fixtures {
 	public static final String NON_EXISTING_EMAIL_1 = "non-existing-1@user.com";
 	public static final String NON_EXISTING_EMAIL_2 = "non-existing-2@user.com";
 	
-	public static final Map<String, String> SESSION_0_HEADERS = ImmutableMap.of("X-Session", "0");
-	public static final Map<String, String> SESSION_1_HEADERS = ImmutableMap.of("X-Session", "1");
+	public static final Map<String, String> SESSION_0_HEADERS = Map.of("X-Session", "0");
+	public static final Map<String, String> SESSION_1_HEADERS = Map.of("X-Session", "1");
 
-	public static final List<JSONObject> NORMAL_USER_LIST = ImmutableList.of(
+	public static final List<JSONObject> NORMAL_USER_LIST = List.of(
 		TestAccounts.Pro_plan_with_two_extra_users.VIEWER(),
 		TestAccounts.Pro_plan_with_two_extra_users.EDITOR(),
 		TestAccounts.Pro_plan_with_two_extra_users.ADMIN()
